# cortex

./: .gitignore  CLAUDE.md  Cargo.toml  ROADMAP.md  api-spec.md  concept-level-provenance-model.md  cortex-v1-next-steps.md  multishard-smoke.ps1  retrieval-smoke.ps1
cortex/: Cargo.toml
cortex-cloud/: CACHE-LIFECYCLE.md  Cargo.toml  models-example.yaml  test-cortex-tools.py
cortex-cloud/src/: main.rs
cortex-local/: Cargo.toml
cortex-local/src/: lib.rs
cortex/src/: gguf.rs  lib.rs  loader.rs
cortex/src/compute/: avx2.rs  device.rs  mod.rs  scalar.rs  wgpu_backend.rs
cortex/src/compute/shaders/: attn_score_batch.wgsl  attn_score_polar.wgsl  bias_add_batch.wgsl  silu_mul_batch.wgsl
cortex/src/layers/: attention.rs  bitlinear.rs  ffn.rs  floatlinear.rs  gpu_bitlinear.rs  gpu_engine.rs  gpu_floatlinear.rs  gpu_kv_cache.rs  gpu_polar.rs  linear.rs  mod.rs  model.rs  moe.rs  quantized_kv_cache.rs  rmsnorm.rs  swiglu.rs  trace.rs  transformer.rs
cortex/src/ops/: dequant.rs  lut.rs  matmul.rs  mod.rs  quantize.rs
pinky/: EVENING-2026-04-08.md  MORNING-2026-04-08.md  POSITION-addendum.md  POSITION.md  README.md  memex-scoring-experiment-2026-05-04.md
pinky/concept-boundaries/: Cargo.toml  README.md  features.csv  features_injection.csv  features_synthetic.csv
pinky/concept-boundaries-train/: README.md  combine_features.py  train.py
pinky/concept-boundaries-train/synthetic/: README.md  generate_fixtures.py
pinky/concept-boundaries-train/synthetic-injection/: README.md  generate_injection_fixtures.py
pinky/concept-boundaries-train/synthetic-injection/fixtures/: inj_000.txt  inj_001.txt  inj_002.txt  inj_003.txt  inj_004.txt  inj_005.txt  inj_006.txt  inj_007.txt  inj_008.txt  inj_009.txt  inj_010.txt  inj_011.txt  inj_012.txt  inj_013.txt  inj_014.txt  inj_015.txt  inj_016.txt  inj_017.txt  inj_018.txt  inj_019.txt  inj_020.txt  inj_021.txt  inj_022.txt  inj_023.txt  inj_024.txt  inj_025.txt  inj_026.txt  inj_027.txt  inj_028.txt  inj_029.txt  inj_030.txt  inj_031.txt  inj_032.txt  inj_033.txt  inj_034.txt  inj_035.txt  inj_036.txt  inj_037.txt  inj_038.txt  inj_039.txt  (+10 more)
pinky/concept-boundaries-train/synthetic/fixtures/: synth_000.txt  synth_001.txt  synth_002.txt  synth_003.txt  synth_004.txt  synth_005.txt  synth_006.txt  synth_007.txt  synth_008.txt  synth_009.txt  synth_010.txt  synth_011.txt  synth_012.txt  synth_013.txt  synth_014.txt  synth_015.txt  synth_016.txt  synth_017.txt  synth_018.txt  synth_019.txt  synth_020.txt  synth_021.txt  synth_022.txt  synth_023.txt  synth_024.txt  synth_025.txt  synth_026.txt  synth_027.txt  synth_028.txt  synth_029.txt  synth_030.txt  synth_031.txt  synth_032.txt  synth_033.txt  synth_034.txt  synth_035.txt  synth_036.txt  synth_037.txt  synth_038.txt  synth_039.txt  (+10 more)
pinky/concept-boundaries-train/synthetic/snippets/: doc.json  system.json  tool.json  user.json
pinky/concept-boundaries/fixtures/: dog-conversation.txt  dog-disclosure.txt  identical-content.txt  irrelevant-disclosure.txt  mixed-trust.txt  multi-source.txt
pinky/concept-boundaries/src/: main.rs
pinky/datasets/gandalf/: fetch_via_api.py  gandalf_all.json  test.parquet  train.parquet  validation.parquet
pinky/fp-llm/: Cargo.toml  PRE-OUTPUT-HOOK.md
pinky/fp-llm/src/: main.rs
pinky/morsel-retrieval/: README.md  connections.json  demo_analysis.py
pinky/morsel-retrieval/papers/: paper_01.txt  paper_02.txt  paper_03.txt  paper_04.txt  paper_05.txt  paper_06.txt  paper_07.txt  paper_08.txt
pinky/morsel-retrieval/retrieve/: Cargo.toml
pinky/morsel-retrieval/retrieve/src/: main.rs
pinky/tools/: extract_conversation.py
src/: gguf.rs  lib.rs  loader.rs  tensor.rs  tokenizer.rs
src/compute/: device.rs  wgpu_backend.rs
src/layers/: engram_memory.rs  ffn.rs  floatlinear.rs  kv_cache.rs  linear.rs  memory.rs  mod.rs  model.rs  moe.rs  rope.rs  sampler.rs  swiglu.rs  transformer.rs
src/ops/: mod.rs
