[package]
name = "cortex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Universal local transformer engine with persistent memory. Runs ternary, quantized, and float models from GGUF."
keywords = ["transformer", "inference", "llm", "ternary", "memory"]
categories = ["science", "mathematics"]

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster"]

[dependencies]
thiserror = "2"
tracing = "0.1"
rayon = "1"
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
