[package]
name = "cortex-cloud"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenAI-compatible HTTP inference server for cortex."

[[bin]]
name = "cortex-server"
path = "src/main.rs"

[features]
default = ["gpu"]
gpu = ["cortex/gpu"]

[dependencies]
cortex = { path = "../cortex" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
